// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsOption renders correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "#C8C7CC",
          "borderBottomWidth": 0.5,
          "flex": 1,
          "height": 44,
          "justifyContent": "center",
          "marginLeft": 15,
          "paddingRight": 15,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={undefined}
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
          },
          Object {
            "fontSize": 17,
            "fontWeight": "400",
            "lineHeight": 22,
          },
        ]
      }
    >
      876f5e88-32ad-444c-8b1a-2d06220dd517
    </Text>
  </View>
</View>
`;

exports[`SettingsOption renders correctly as the last item 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "#C8C7CC",
          "borderBottomWidth": 0.5,
          "flex": 1,
          "height": 44,
          "justifyContent": "center",
          "marginLeft": 15,
          "paddingRight": 15,
        },
        Object {
          "borderBottomWidth": 0,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={undefined}
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
          },
          Object {
            "fontSize": 17,
            "fontWeight": "400",
            "lineHeight": 22,
          },
        ]
      }
    >
      f8cf85fb-3834-47e6-a8b8-a669e78df02f
    </Text>
  </View>
</View>
`;
